--- a/github_coffee/search.css
+++ b/github_coffee/search.css
@@ -2,7 +2,10 @@
     background-color:  #0b3935;
     color: #dfdbb6;
  }
- 
+ body{
+    background-color:  #0b3935;
+    color: #dfdbb6;
+ }
  .search-container {
     display: flex;
     align-items: center;
@@ -22,19 +25,28 @@
     width: 215px;
   }
   
+ 
   #search-btn {
     padding: 5px 10px;
     margin-left: 290px;
     width: 150px;
     background-color: #dfdbb6;
     border-color: #dfdbb6;
-    
   }
+  
+  #search-btn:active {
+    background-color: #286090; /* New background color for active state */
+    border-color: #286090; /* New border color for active state */
+    box-shadow: none; /* Remove the default blue shadow */
+    outline: none; /* Remove the default outline */
+  }
+  
   
   #product-container {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
     grid-gap: 20px;
+    margin: 100px;
   }
   
   .navbar-brand {
