--- a/github_coffee/main.css
+++ b/github_coffee/main.css
@@ -23,13 +23,24 @@
 
   p {
     font-family: 'Didact Gothic', sans-serif;
+    background-color:  #0b3935;
+    color: #dfdbb6;
   }
 
   h1 {
     font-family: 'Alegreya Sans', sans-serif;
     font-weight: bold;
-    color: white;
+    background-color:  #0b3935;
+    color: #dfdbb6;
     text-align: center;
+    padding: 20px;
+  }
+
+  h3 {
+    font-family: 'Alegreya Sans', sans-serif;
+    font-weight: bold;
+    background-color:  #0b3935;
+    color: #dfdbb6;
     padding: 20px;
   }
 
@@ -134,4 +145,27 @@
       position: fixed;
     }
   }
-  
+
+  .text {
+    font-family: 'Didact Gothic', sans-serif;
+    font-weight: 100;
+    background-color:  #0b3935;
+    color: #dfdbb6;
+    padding: 20px;
+    font-size: 1.2rem;
+  }
+  .title {
+    background-color:  #0b3935;
+    color: #dfdbb6;
+  }
+
+  .borders {
+    border-top: 8px solid #dfdbb6;
+    border-bottom: 8px solid #dfdbb6;
+
+  }
+  .about_us {
+    text-align: center;
+    margin-left:8%;
+    margin-right:8%;
+  }
