--- a/github_coffee/main.css
+++ b/github_coffee/main.css
@@ -1,5 +1,7 @@
 #my-body {
-    background-color: #0b3935;
+  background-color:#0b3935; }
+#my-bod {
+    background-image: linear-gradient(to right, #0b3935,#144552, #0b3935);
   }
 
   .image-container {
@@ -154,9 +156,34 @@
     padding: 20px;
     font-size: 1.2rem;
   }
+
+  @keyframes title {
+    from {
+      transform: translateX(-300px);
+    }
+    to {
+      transform: translateX(0);
+    }
+    
+  }
+
   .title {
     background-color:  #0b3935;
     color: #dfdbb6;
+    animation-name: title;
+    animation-duration: 1s;
+    animation-timing-function: ease-in;
+    animation-delay: 1s;
+  }
+
+  @keyframes title {
+    from {
+      transform: translateX(-300px);
+    }
+    to {
+      transform: translateX(0);
+    }
+    
   }
 
   .borders {
@@ -176,7 +203,7 @@
 
   .login-box {
     position: absolute;
-    top: 50%;
+    top: 70%;
     left: 50%;
     width: 400px;
     padding: 40px;
@@ -270,3 +297,12 @@
     animation: btn-anim1 2s linear infinite;
   }
   
+  .checkbox { 
+    color: white;
+  }
+  
+  .otstup {
+    margin-top: 100%;
+  }
+
+ 
