--- a/github_coffee/types.css
+++ b/github_coffee/types.css
@@ -57,4 +57,27 @@ body {
     color: #dfdbb6; /* Change the font color on hover */
   }
   
+  .img-fluid{
+    border-radius: 80px;
+  }
+ table{
+  border-spacing: 30px;
+ }
+ button {
   
+  padding: 15px 25px;
+  border: 0;
+  color: #212121;
+  z-index: 1;
+  background: #0b3935;
+  position: relative;
+  font-weight: 1000;
+  font-size: 17px;
+  
+  transition: all 250ms;
+  overflow: hidden;
+ }
+ 
+ button:hover {
+  color: #e8e8e8;
+ }
